# nix-config

./: LICENSE  agda.sty  configuration.nix  flake.nix  hardware-configuration.nix  home-e114112.nix  home-e126155.nix  home-herring.nix  home-manager-switch-salmon  home-salmon.nix  home-work.nix  home.nix  salmon-home.nix
alacritty/: default.nix
nvim/: default.nix
xmonad/: LICENSE  default.nix  flake.nix  xmonad-config.cabal  xmonad-x86_64-linux  xmonad.hs
xmonad/app/: Main.hs
xmonad/lib/: IfMaxAlt.hs  SideBorderDecoration.hs
