cabal-version:      2.4
name:               xmonad-config
version:            0.1.0.0

extra-source-files: CHANGELOG.md

executable xmonad
    main-is:          xmonad.hs
    other-modules:    IfMaxAlt, SideBorderDecoration
    build-depends:    base 
                    , xmonad
                    ,	xmonad-contrib ^>= 0.17.1
                    , containers
    hs-source-dirs:   . 
                    , lib
    default-language: Haskell2010
