cabal-version:      3.0
name:               xmonad-config
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Martin Fredin
maintainer:         fredin.martin@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common commons
  default-extensions:
    LambdaCase
    PatternSynonyms
    OverloadedRecordDot      
    BlockArguments        
    LexicalNegation
    GADTs
  -- ghc-options:
    -- -Werror
    -- -Wall
    -- -Wcompat
    -- -Wno-name-shadowing
    -- -Wno-type-defaults

executable xmonad-config
    import:           commons
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.0.0
      , xmonad
      , xmonad-contrib
      , containers
    hs-source-dirs:   app
    default-language: GHC2021
